# cicd-strawman

./: .gitignore  .talismanrc  CODEOWNERS  Dockerfile  Dockerfile_poetry  README.md  build-cli  devcli  docker-compose.yaml  pyproject.toml
.github/actions/configure-aws-environment/: action.yml
.github/actions/poetry/: action.yml
.github/actions/run-integration-tests/: action.yml
.github/actions/run-tests-unit/: action.yml
.github/actions/run-unit-tests/: action.yml
.github/workflows/: cicd-strawman.yml  demo.yaml  dev-to-prod-pipeline.yml  main-pipeline.yml  pull-request-pipeline.yml
cli/: settings.yml
cli/src/: bashly.yml  build_command.sh  code_scan_ash_command.sh  code_scan_black_command.sh  code_scan_flake8_command.sh  code_scan_mypy_command.sh  code_scan_trufflehog_command.sh  deploy_command.sh  test_integration_command.sh  test_unit_command.sh  weather_command.sh
cli/src/lib/: colors.sh  environment.sh  send_completions.sh
src/cicd/strawman/: calculator.py  main.py
src/cicd/ui/: app.py
tests/: test_calculator.py  test_main.py
